Add resend email confirmation function

--- a/WebApiWithIdentityDemo/appsettings.json
+++ b/WebApiWithIdentityDemo/appsettings.json
@@ -8,6 +8,12 @@
     "Secret": "68c0a974-5e51-4faa-be6e-ac7b66711ea5",
     "ExpiresInMinutes": "1"
   },
+  "SmtpConfig": {
+    "Host": "",
+    "Port": "",
+    "Username": "",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
